--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shailesh Suthar Portfolio</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/projects.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,6 +27,9 @@
         {% include '4-Tools.html' %}
         {% include '5-Education.html' %}
         {% include '6-Honor-awards.html' %}
+        {% include '7-Projects.html' %}
+        {% include '8-Summary.html' %}
+        {% include '9-Footer.html' %}
     </div>
 
 </body>
