removal of comcast from resume section.

--- a/templates/3-Resume.html
+++ b/templates/3-Resume.html
@@ -26,10 +26,10 @@
 						<img src="/static/imgs/saarthee.png" width="50" height="25" class="company-logo rounded-2">
 						Saarthee.ai
 					</p>
-					<p class="mt-4">Providing end-to-end CRM solutions for the COMCAST Smart Solution Team.
+					<p class="mt-4">Providing end-to-end CRM solutions to the telecom firm.
 					<ul class="list-styled">
 						<li class="bullet_point">CRM & Sales Automation</li>
-						<li>Developed Sales-Hub application in Dynamics 365 for COMCAST Smart Solution Team</li>
+						<li>Developed Sales-Hub application in Dynamics 365</li>
 						<li>Automated tasks with Power Automate</li>
 						<li class="bullet_point">Data Visualization, ETL & GenAI</li>
 						<li>Created seven Power BI dashboards for comprehensive data analysis</li>
