rectified the issue over controls of navbar.

--- a/templates/7-Projects.html
+++ b/templates/7-Projects.html
@@ -1,3 +1,5 @@
+<section id="project-section"></section>
+
 <h2 class="subheading-title mb-3 pb-4">Projects Work</h2>
 <div class="col paragraph fs-6 fw-medium text-secondary">
     <p>find a curated selection of my key projects, showcasing my skills, creativity, and professional expertise.
