--- a/templates/8-Summary.html
+++ b/templates/8-Summary.html
@@ -1,3 +1,5 @@
+<section id="contact-section"></section>
+
 <div class="summary-container">
     <div class="summary-grid">
         <div class="summary-card">
@@ -35,11 +37,14 @@
     </div>
 </div>
 <br><br>
+<br><br>
 <div class="row justify-content-center">
     <div class="col-md-7 ftco-animate text-center">
         <h2>More projects on<span> Github </span> </h2>
+        <br><br>
         <div class="heading">
             <h4> I love to solve business problems &amp; uncover hidden data stories </h4>
+            <br>
             <br>
             <p><a href="https://github.com/shaileshsuthar675" class="btn btn-primary py-3 px-5">GitHub</a>
             </p>
@@ -48,63 +53,3 @@
 </div>
 
 <br><br>
-
-
-<style>
-    /* Container for centering */
-    .summary-container {
-        display: flex;
-        justify-content: center;
-        margin-top: 100px;
-    }
-
-    /* Grid styling */
-    .summary-grid {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        justify-content: center;
-        max-width: 800px;
-    }
-
-    /* Card styling */
-    .summary-card {
-        background: #e2eff7;
-        border-radius: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        width: 180px;
-        height: 150px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    /* Card hover effect */
-    .summary-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-    }
-
-    /* Content styling */
-    .summary-content {
-        text-align: center;
-        color: #000000;
-    }
-
-    .btn {
-        text-decoration: none;
-    }
-
-    .number {
-        font-size: 36px;
-        font-weight: bold;
-        margin: 0;
-    }
-
-    .label {
-        font-size: 18px;
-        margin: 0;
-    }
-</style>
