--- a/templates/8-Summary.html
+++ b/templates/8-Summary.html
@@ -46,7 +46,11 @@
             <h4> I love to solve business problems &amp; uncover hidden data stories </h4>
             <br>
             <br>
-            <p><a href="https://github.com/shaileshsuthar675" class="btn btn-primary py-3 px-5">GitHub</a>
+            <p><a href="https://pypi.org/user/Shaileshsuthar676/"
+                    class="btn btn-primary py-6 px-2 me-2 my-0 rounded-4 fw-bold">PyPi
+                    Repo</a>
+                <a href="https://github.com/shaileshsuthar675"
+                    class="btn btn-outline-dark py-6 px-2 rounded-4 me-2 fw-bold">Github</a>
             </p>
         </div>
     </div>
